--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "tsc && npm run copy-templates",
-    "copy-templates": "powershell -Command \"if (-not (Test-Path 'dist\\views')) { New-Item -ItemType Directory -Path 'dist\\views' }\" && npx copyfiles -u 2 \"src\\views\\*\" dist\\mail\\views",
+   "copy-templates": "mkdir -p dist/views && npx copyfiles -u 2 \"src/views/*\" dist/mail/views",
     "start:dev": "nodemon --exec ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nodemon --exec ts-node -r tsconfig-paths/register src/main.ts",
