--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "build": "tsc && npm run copy-templates",
    "copy-templates": "mkdir -p dist/views && npx copyfiles -u 2 \"src/views/*\" dist/mail/views",
-    "start:dev": "nodemon --exec ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": "node --max-old-space-size=4096 ./node_modules/nodemon/bin/nodemon.js --exec ts-node -r tsconfig-paths/register src/main.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nodemon --exec ts-node -r tsconfig-paths/register src/main.ts",
+    "start": "node --max-old-space-size=4096 ./node_modules/nodemon/bin/nodemon.js --exec ts-node -r tsconfig-paths/register src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
